# qr-generator-with-csv

./: .gitignore  README.md  pyproject.toml  requirement.txt  requirements.txt
config/: logging_config.ini
src/: log.py  main.py  settings.py
src/data_reader/: readers.py
src/helpers/: exceptions.py  parser.py  validators.py
src/helpers/data_reader/: readers.py
src/qr/: generator.py
src/qr_requestor/: main.py
tests/: test_parse.py
